--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@ body{
     text-align: center;
 }
 
-nav{
-    text-decoration: none;
+ul{
+    list-style-type: none;
+    
 }
-
 h2{
     padding-left: 15px;
 }
