--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 
 body{
-    background-color:burlywood;
+    background-color:rgb(32, 32, 32);
+    color:rgb(223, 223, 223)
+    
 }
 
 .mainHeader{
@@ -14,4 +16,10 @@ ul{
 }
 h2{
     padding-left: 15px;
+}
+h3{
+    padding-left: 20px;
+}
+p{
+    padding-left: 25px;
 }
