--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
 
 
 body{
+    text-align: center;
     background-color:rgb(32, 32, 32);
     color:rgb(223, 223, 223)
     
 }
-
-.mainHeader{
-    text-align: center;
-}
-
 ul{
     list-style-type: none;
-    
 }
-h2{
-    padding-left: 15px;
+h1{
+    font-size: 30px;
 }
-h3{
-    padding-left: 20px;
+li{
+    padding-right: 33px; ;
 }
-p{
-    padding-left: 25px;
+a{
+    text-decoration: none;
+    color: darkred;
+}
+a:hover{
+    color:white
 }
