--- a/style.css
+++ b/style.css
@@ -22,3 +22,14 @@ a{
 a:hover{
     color:white
 }
+.footer { 
+    font-size: small;  
+    position:fixed;
+    left:0px;
+    bottom:0px;
+    height:30px;
+    width:100%;
+ }
+p{
+    margin: 15px;
+}
